--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "cors": "^2.8.4",
     "express": "4.15.3",
     "mongoose": "4.11.3",
-    "mongoose-paginate": "5.0.3"
+    "mongoose-paginate": "5.0.3",
+    "nodemailer": "^4.0.1"
   }
 }
