--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "homepage": "https://github.com/zubair1024/realty#readme",
   "dependencies": {
     "body-parser": "1.17.2",
+    "cloudinary": "1.9.0",
     "compression": "^1.7.0",
     "cors": "^2.8.4",
     "express": "4.15.3",
