--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "express": "4.15.3",
     "mongoose": "4.11.3",
     "mongoose-paginate": "5.0.3",
-    "nodemailer": "^4.0.1"
+    "multer": "1.3.0",
+    "nodemailer": "^4.0.1",
+    "path": "0.12.7"
   }
 }
