--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "mongoose": "4.11.3",
     "mongoose-paginate": "5.0.3",
     "multer": "1.3.0",
+    "multer-storage-cloudinary": "2.2.1",
     "nodemailer": "^4.0.1",
     "path": "0.12.7"
   }
