--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "multer": "1.3.0",
     "multer-storage-cloudinary": "2.2.1",
     "nodemailer": "^4.0.1",
-    "path": "0.12.7"
+    "path": "0.12.7",
+    "request": "^2.81.0"
   }
 }
