--- a/package.json
+++ b/package.json
@@ -18,11 +18,12 @@
   },
   "homepage": "https://github.com/zubair1024/realty#readme",
   "dependencies": {
-    "body-parser": "1.17.2",
-    "cloudinary": "1.9.0",
-    "compression": "^1.7.0",
+    "body-parser": "^1.19.0",
+    "cloudinary": "^1.25.0",
+    "compression": "^1.7.4",
     "cors": "^2.8.4",
-    "express": "4.15.3",
+    "dotenv": "^8.2.0",
+    "express": "^4.17.1",
     "mongoose": "4.11.3",
     "mongoose-paginate": "5.0.3",
     "multer": "1.3.0",
