--- a/public/package.json
+++ b/public/package.json
@@ -33,9 +33,9 @@
     "babel-preset-es2015": "^6.13.2",
     "babel-preset-stage-1": "^6.5.0",
     "babel-register": "^6.9.0",
-    "browser-sync": "^2.13.0",
+    "browser-sync": "^2.26.14",
     "connect-history-api-fallback": "^1.2.0",
-    "gulp": "github:gulpjs/gulp#4.0",
+    "gulp": "github:gulpjs/gulp",
     "gulp-babel": "^6.1.2",
     "gulp-changed-in-place": "^2.0.3",
     "gulp-concat": "^2.6.1",
@@ -43,10 +43,10 @@
     "gulp-eslint": "^2.0.0",
     "gulp-htmlmin": "^3.0.0",
     "gulp-notify": "^2.2.0",
-    "gulp-plumber": "^1.1.0",
+    "gulp-plumber": "^1.2.1",
     "gulp-rename": "^1.2.2",
     "gulp-sourcemaps": "^2.0.0-alpha",
-    "gulp-strip-comments": "^2.5.1",
+    "gulp-strip-comments": "^2.5.2",
     "gulp-strip-debug": "^1.1.0",
     "gulp-uglify": "^3.0.0",
     "html-minifier": "^3.5.3",
